--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "packageManager": "pnpm@10.6.5",
   "dependencies": {
     "cors": "^2.8.5",
+    "express": "^5.1.0",
     "expressjs": "^1.0.1",
     "mongoose": "^8.13.1",
     "zod": "^3.24.2"
