--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "packageManager": "pnpm@10.6.5",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^5.1.0",
