--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,14 @@
   "license": "ISC",
   "packageManager": "pnpm@10.6.5",
   "dependencies": {
+    "@tensorflow/tfjs-node": "^4.22.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "canvas": "^3.1.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^5.1.0",
+    "face-api.js": "^0.22.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.1",
     "zod": "^3.24.2"
